--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,7 @@
 [build]
-builder = "dockerfile"
-dockerfilePath = "Dockerfile"
+builder = "nixpacks"
 
 [deploy]
 healthcheckPath = "/"
 healthcheckTimeout = 300
-numReplicas = 1
+
