--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,8 @@
 [build]
-builder = "nixpacks"
+builder = "dockerfile"
+dockerfilePath = "Dockerfile"
 
 [deploy]
+startCommand = "node server.js"
 healthcheckPath = "/"
 healthcheckTimeout = 300
-
